# OmniDB

./: Cargo.toml  README.md
omnidb/: main.rs  types.rs
